# game-development

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
assets/: attack.xml  map1.tmx  map2.tmx  test.xml
cmake/: add_module.cmake
core/: CMakeLists.txt
core/include/: Vector2D.h  logging.h
core/src/: base64.cpp
editor/: CMakeLists.txt
editor/include/: AnimatedGraphic.h  Bullet.h  BulletHandler.h  Camera.h  Collision.h  CollisionManager.h  Enemy.h  Eskeletor.h  Game.h  GameObject.h  GameObjectFactory.h  GameOverState.h  GameState.h  GameStateMachine.h  Glider.h  InputHandler.h  Layer.h  Level.h  Level1Boss.h  LevelParser.h  LoaderParams.h  MainMenuState.h  MenuButton.h  MenuState.h  ObjectLayer.h  PauseState.h  PlatformerObject.h  PlayState.h  Player.h  RoofTurret.h  SDLGameObject.h  ScrollingBackground.h  ShooterObject.h  Snail.h  SoundBuffer.h  SoundDevice.h  SoundManager.h  SoundSource.h  StateParser.h  TextureManager.h  (+2 more)
editor/src/: AnimatedGraphic.cpp  Camera.cpp  CollisionManager.cpp  Enemy.cpp  Game.cpp  GameObjectFactory.cpp  GameOverState.cpp  GameStateMachine.cpp  InputHandler.cpp  Level.cpp  LevelParser.cpp  MainMenuState.cpp  MapLoader.cpp  MenuButton.cpp  MenuState.cpp  ObjectLayer.cpp  PauseState.cpp  PlatformerObject.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  ScrollingBackground.cpp  ShooterObject.cpp  SoundBuffer.cpp  SoundDevice.cpp  SoundManager.cpp  SoundSource.cpp  StateParser.cpp  TextureManager.cpp  TileLayer.cpp
sdl2/: CMakeLists.txt
sdl2/samples/alien_attack/: CMakeLists.txt  Eskeletor.h  Level1Boss.h  ShotGlider.h
(+39 files in other folders)
